--- a/package.json
+++ b/package.json
@@ -5,21 +5,21 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.2.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "axios": "^1.2.1",
     "firebase": "^9.14.0",
     "html-entities": "^2.3.3",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
     "react-redux": "^8.0.5",
     "react-redux-firebase": "^3.11.0",
-    "react-router-dom": "^6.4.4",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.4.5",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.7.0",
     "redux": "^4.2.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
